--- a/css/pplhd.css
+++ b/css/pplhd.css
@@ -6,6 +6,7 @@
 .pplhd.ios #p_download,
 .pplhd.ios #p_guide,
 .pplhd.ios #p_features,
+.pplhd.ios #p_purchases,
 .pplhd.ios #p_sets,
 .pplhd.ios .btnReference,
 .pplhd.ios #tratt_cont_punti,
