--- a/css/ambiente.css
+++ b/css/ambiente.css
@@ -633,7 +633,6 @@ body:not(.bodyModello) #logoSovra{
 .visNoConnDiv{
     display: block !important;
 }
-
 #cont_debug_db_cont{
     display: none;
 }
@@ -652,6 +651,7 @@ body:not(.bodyModello) #logoSovra{
 	-moz-user-select: text !important;
 	-ms-user-select: text !important;
 	user-select: text !important;
+	-webkit-touch-callout: default !important;
 }
 #cont_debug_db.loading{
 	background-image:url(../img/loadingBlack.gif) !important;
