--- a/css/menu.css
+++ b/css/menu.css
@@ -1427,6 +1427,17 @@ body:not(.bodyStyled2) #btn_modut{
 	background-color:rgba(255,255,255,0.1);
 }
 
+#p_purchases{
+	background-image:url(../img/ico_purchasesN.png),url(../img/frDxB.png);
+	cursor:pointer;
+}
+.bodyStyled2 #p_purchases{
+	background-image:url(../img/ico_purchases.png),url(../img/frDx.png);
+}
+#p_purchases:hover{
+	background-color:rgba(255,255,255,0.1);
+}
+
 #p_colori{
 	background-image:url(../img/ico_coloriN.png),url(../img/frDxB.png);
 	cursor:pointer;
