--- a/css/popup_impset.css
+++ b/css/popup_impset.css
@@ -18,6 +18,7 @@
     line-height: 30px;
     margin-right: 13px;
     margin-top: 5px;
+	margin-left: 6px;
 	border-radius:6px;
 	padding-left:10px;	
 	padding-right:30px;	
