--- a/sets/meridiani_shiatsu/stili.css
+++ b/sets/meridiani_shiatsu/stili.css
@@ -251,10 +251,66 @@ body:not(.bodyStyled1):not(.bodyStyled2):not(.smart) #p_set{
     color: rgba(0,0,0,0.6);
     width: 32px;
 }
+#titNMK{
+	color: rgba(255,255,255,0.6);
+    font-size: var(--font-20-5);
+    margin-bottom: 10px;
+    text-align: left;
+    margin-left: 16px;
+    margin-top: 14px;
+}
+.labelApparato{
+	display: block;
+    width: 100%;
+    height: 36px;
+    line-height: 36px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    padding-left: 15px;
+    padding-right: 35px;
+    background-image: url(../../img/frGiuB.png), linear-gradient(to bottom, #FFF 0%,#EEE 100%);
+    background-repeat: no-repeat, repeat-x;
+    background-position: right top, center center;
+    background-size: auto 36px, auto;
+    border-radius: 4px;
+	text-overflow: ellipsis;
+    white-space: nowrap;
+    background-color: #FFF;
+    background-repeat: no-repeat;
+    background-position: right center;
+    box-shadow: 0px 0px 3px rgba(0,0,0,0.3);
+	cursor:pointer;
+	margin-bottom:5px !important;
+}
+.apparati_nmk:not(.vis_apparati) .labelApparato:hover{
+	background-image:url(../../img/frGiuB.png), linear-gradient(to bottom, #EEE 0%,#DDD 100%) !important;
+}
+.apparati_nmk:not.vis_apparati .labelApparato:hover{
+	background-image:url(../../img/frSuB.png), linear-gradient(to bottom, #EEE 0%,#DDD 100%) !important;
+}
+.apparati_nmk{
+	padding-bottom: 10px;
+}
+.apparati_nmk:not(.vis_apparati){
+	height:40px;
+	overflow:hidden;
+}
+.apparati_nmk.vis_apparati .labelApparato{
+    background-image: url(../../img/frSuB.png), linear-gradient(to bottom, #FFF 0%,#EEE 100%) !important;
+}
+.apparati_nmk p:not(.labelApparato){
+	margin-left:5px;
+}
 #meridianiSmart_cont:not(.onlyCIN) .noMAS,
-.listaMeridiani:not(.onlyCIN) .noMAS{
+#meridianiSmart_cont.onlyNMK,
+#meridianiSmart_ico.onlyNMK,
+.listaMeridiani:not(.onlyCIN) .noMAS,
+.listaMeridiani.onlyNMK .noNMK,
+.listaMeridiani:not(.onlyNMK) .NMK{
 	display:none !important;
 }
+
 .onlyCIN .noCIN{
 	display:none !important;
 }
