--- a/sets/meridiani_shiatsu/stili.css
+++ b/sets/meridiani_shiatsu/stili.css
@@ -269,8 +269,8 @@ body:not(.bodyStyled1):not(.bodyStyled2):not(.smart) #p_set{
 .labelApparato{
 	display: block;
     width: 100%;
-    height: 36px;
-    line-height: 36px;
+    height: 36px !important;
+    line-height: 36px !important;
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
