--- a/sets/auricologia/stili.css
+++ b/sets/auricologia/stili.css
@@ -174,8 +174,10 @@ body.orecchio #pulsante_modello{
 }
 .elencoPunti p{
 	text-align:left;
-	height:30px;
-	line-height:30px;
+	/* height:30px;
+	line-height:30px; */
+	height: 31px;
+    line-height: 27px;
 	margin:0px;
 }
 #scheda_testo .elencoPunti p:not(.categoriaGruppo){
