--- a/css/pplhd.css
+++ b/css/pplhd.css
@@ -20,6 +20,7 @@
 .pplhd.ios #marketingTools_btns,
 .pplhd.ios #marketingTools_btns_in,
 .pplhd.ios .p_paz_choose,
+.pplhd.ios .p_paz_screenshot,
 .pplhd.ios #chooFoto,
 .pplhd.ios .app_report_sch{
 	display:none !important;
