--- a/css/menu.css
+++ b/css/menu.css
@@ -158,7 +158,7 @@ body:not(.smart) #contBtnModello{
     border-radius: 6px;
     background-color: rgba(0,0,0,0.15);
 }
-body:not(.donna):not(.uomo):not(.piedi):not(.orecchio) #contBtnModello{
+body:not(.bodyModello) #contBtnModello{
     padding-left: 0px !important;
     padding-right: 0px !important;
 }
