--- a/css/popup_archives.css
+++ b/css/popup_archives.css
@@ -10,7 +10,7 @@
 	margin-top:-270px;
 }
 #labelArchives{
-	background-image:url(../img/ico_file.png);
+	background-image:url(../img/ico_foto.png);
 	background-position: 5px center !important;
 }
 #contArchives{
