--- a/css/ambiente.css
+++ b/css/ambiente.css
@@ -387,6 +387,7 @@ body:not(.bodyModello) #logoSovra{
 	opacity:1
 }
 #chiudiFileBig,
+#editFileBig,
 #chiudiPdfBig,
 #chiudiDebugBig{
 	position:fixed;
@@ -402,6 +403,14 @@ body:not(.bodyModello) #logoSovra{
 }
 #chiudiFileBig:hover{
 	background-color:rgba(255,255,255,0.8) !important;
+}
+#editFileBig{
+	display:none;
+	background-image:url(../img/ico_draw2.png) !important;
+	background-color:rgba(255,255,255,0.8) !important;
+	background-size: 70% !important;
+	opacity:1 !important;
+	right: 50px !important;
 }
 #chiudiPdfBig{
 	background-color:#FFF !important;
