--- a/css/popup_impset.css
+++ b/css/popup_impset.css
@@ -4,9 +4,9 @@
 /* IMPOSTAZIONIE DEL SET */
 #impset{
 	width: 400px;
-    height: 490px;
+    height: 380px;
     margin-left: -200px;
-    margin-top: -245px;
+    margin-top: -190px;
 }
 #labelImpset{
 	background-image:url(../img/p_impostazioniN.png);
@@ -40,5 +40,7 @@
 #patientPwdField{
 	width: calc(100% - 20px);
     margin-top: 10px;
-	display:none;
+}
+#patientPwdField:not(.visSch){
+	opacity:0.2;
 }
