--- a/sets/meridiani_cinesi/stili.css
+++ b/sets/meridiani_cinesi/stili.css
@@ -22,9 +22,9 @@ body.uomo #pulsante_modello{
 	display:none;
 }
 
-/*.simboliPunto{
-	float:right;
-}*/
+.tab_punti h1 *{
+	font-size:inherit !important;
+}
 .smart .simboliPunto{
 	margin-top: 20px;
 }
@@ -43,8 +43,14 @@ body.uomo #pulsante_modello{
 	padding: 15px 10px;
 	margin: -15px;
     margin-left: 20px !important;
+	margin-bottom: 20px !important;
 	padding-top: 26px;
     border-top-left-radius: 14px;
+}
+.smart .ideogrammaPuntoChar,
+.smart .ideogrammaMeridianoChar{
+    font-size: 38px !important;
+    line-height: 44px !important;
 }
 .ideogrammaMeridianoChar{
 	position: absolute;
@@ -55,16 +61,19 @@ body.uomo #pulsante_modello{
 	width:69px;
 	padding-top:26px;
 }
-#scheda.schLato .ideogrammaMeridianoChar{
+.smart .ideogrammaMeridianoChar{
+	width:59px;
+    font-size: 38px !important;
+    line-height: 44px !important;
+}
+#scheda.schLato .ideogrammaMeridianoChar,
+.smart .ideogrammaMeridianoChar{
     top: 46px;
     height: calc(100% - 46px);
 }
-#scheda:not(.schLato) .ideogrammaMeridianoChar{
+body:not(.smart) #scheda:not(.schLato) .ideogrammaMeridianoChar{
     top: 71px;
     height: calc(100% - 71px);
-}
-.smart .ideogrammaPuntoChar{
-	margin-top: 20px;
 }
 .speach_icon{
 	width: 31px;
@@ -76,12 +85,6 @@ body.uomo #pulsante_modello{
     float: right;
     margin-top: -17px;
     opacity: 0.6;
-/*	transform:scale(0.8);
-	-webkit-transform:scale(0.8);
-}
-.speach_icon:hover{
-	transform:scale(1) !important;
-	-webkit-transform:scale(1) !important;*/
 }
 .ideogrammaMeridianoChar img{
 	width: 31px;
